apps/jellyfin/ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    istio: ingress
  servers:
    - hosts:
        - 'jellyfin.home.arpa'
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts:
        - 'jellyfin.home.arpa'
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: jellyfin-tls

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  gateways:
  - jellyfin
  hosts:
  - 'jellyfin.home.arpa'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jellyfin.jellyfin.svc.cluster.local
        port:
          number: 8096
